--- a/KeJianApi/Web.config
+++ b/KeJianApi/Web.config
@@ -11,8 +11,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="Default" connectionString="Server=120.79.76.250; Database=KeJian; User Id=sa; Password=Root0330; " providerName="System.Data.SqlClient" />
-    <!-- <add name="Default" connectionString="Server=****; Database=****; User Id=**; Password=****; " providerName="System.Data.SqlClient" />-->
+    <add name="Default" connectionString="S1BUAH34BXUHBCAUHS7COM9KSMOCAINSC6UNAS90CBIS34BC" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
